syntax = "proto3";

package paymentpb;

option go_package = "github.com/Prototype-1/freelanceX_apigateway_service/proto/freelanceX_invoice.payment_service/payment;paymentpb";

service PaymentService {
  rpc SimulatePayment(SimulatePaymentRequest) returns (SimulatePaymentResponse);
}

message SimulatePaymentRequest {
  string invoice_id = 1;
  string milestone_id = 2; 
  string payer_id = 3;    
  string receiver_id = 4;
  double amount = 5;     
}

message SimulatePaymentResponse {
  string payment_id = 1;
  double amount_paid = 2;
  double platform_fee = 3;
  double amount_credited = 4;
  string status = 5; 
  string razorpay_order_id = 6; 
}
